# adversense

./: .gitignore  hf_test.py  pyproject.toml  requirements.txt  test_bedrock.py
backend/: main.py  requirements.txt  store.py  test_model_querier.py
backend/agent/: adversense_agent.py
backend/agent/prompts/: planner_prompt.py  synthesizer_prompt.py
backend/agent/tools/: model_querier.py  probe_generator.py  report_writer.py  response_scorer.py
backend/report/: generator.py
backend/report/templates/: report.html
backend/routers/: audit.py  ws.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AgentFeed.jsx  FindingsPanel.jsx  ReportDownload.jsx  SubmitForm.jsx
frontend/src/hooks/: useAgentStream.js  useAuditJob.js
frontend/src/utils/: severity.js
install/: pyvenv.cfg
python-dotenv/: pyvenv.cfg
